--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "xxx i18n && vue-cli-service serve",
+    "build": "xxx i18n && vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "buildLanguage": "xxx i18n"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "axios": "^0.25.0",
     "element-ui": "^2.15.6",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.27.0",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
   },
