--- a/hello-tool/package.json
+++ b/hello-tool/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "xxx-tool",
+  "name": "@wanglin1994/hello-tool",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "bin": {
-    "xxx": "./index.js"
+    "hello": "./index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
