--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -5,13 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "buildLanguage": "xxx i18n"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
-    "mockjs": "^1.1.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.27.0",
     "vue-router": "^3.5.3",
@@ -21,9 +20,11 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@wanglin1994/vue-cli-plugin-i18n": "file:../vue-cli-plugin-i18n",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "mockjs": "^1.1.0",
     "sass": "^1.49.7",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
