--- a/hello-tool/package.json
+++ b/hello-tool/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wanglin1994/hello-tool",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -13,11 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commander": "^9.0.0"
-  },
-  "devDependencies": {
+    "commander": "^9.0.0",
     "@babel/core": "^7.17.2",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.0"
-  }
+  },
+  "devDependencies": {}
 }
