--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "buildI18n": "hello i18n"
   },
   "dependencies": {
     "axios": "^0.25.0",
@@ -19,6 +20,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@wanglin1994/vue-cli-plugin-i18n": "file:../vue-cli-plugin-i18n",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
